# dingus

./: .gitignore  Cargo.toml  LICENSE  README.md  dingus.yaml  example.json  example.yaml  gecko.yaml  go.mod  go.sum  main.go  readme.md  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yaml
config/: config.go
demo/: demo.tape  gecko.yaml
docs/: Dingus.afdesign  dingus.yaml  docusaurus.config.ts  package-lock.json  package.json
docs/blog/: 2024-06-29-introducing-dingus.md  authors.yml
docs/docs/: configuration.md  installation.md  intro.md  introduction.md
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/pages/: index.module.css  index.tsx
execution/: executor.go
prompt/: prompt_executor.go
rust/: Cargo.toml  example.yaml  shiji.yaml
rust/src/: cli.rs  commands.rs  config.rs  definitions.rs  exec.rs  execution.rs  main.rs  prompt.rs  shell.rs  variables.rs
src/: actions.rs  args.rs  cli.rs  commands.rs  config.rs  defer.rs  exec.rs  main.rs  platform.rs  prompt.rs  variables.rs
template/: rendered_string.go  template_renderer.go
variables/: flag_provider.go  variable_provider.go
