[package]
name = "gecko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["string"] }
inquire = "0.7.5"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.10.1"
